# swagger/api.swagger.json
@@ -48,9 +48,7 @@
         "tags": [
           "OcpProjectApi"
         ]
-      }
-    },
-    "/projects/{course_id}/{name}": {
+      },
       "post": {
         "summary": "Create new project",
         "operationId": "OcpProjectApi_CreateProject",
@@ -68,21 +66,6 @@
             }
           }
         },
-        "parameters": [
-          {
-            "name": "course_id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          },
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
         "tags": [
           "OcpProjectApi"
         ]
